restructure into 3 versions