@@ -1,9 +1,8 @@
-package weather;
+package identity.weather;
 
 import java.io.IOException;
 import java.time.LocalDate;
 
-// --enable-preview --add-exports=java.base/jdk.internal.value=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
 class WeatherExample {
   static void main() throws IOException {
     // Coordinates
@@ -11,9 +10,9 @@ class WeatherExample {
     var noirmoutier = new WeatherService.LatLong(46.966667, -2.216667);
     var toulon = new WeatherService.LatLong(43.125833, 5.930556);
 
-    // One year, 2024-2025
+    // Ten years, 2025-2015
     var endDate = LocalDate.parse("2025-01-01");
-    var startDate = endDate.minusYears(1);
+    var startDate = endDate.minusYears(10);
 
     var weatherData = WeatherService.getWeatherData(paris, startDate, endDate);
     System.out.println(WeatherComputation.compute(weatherData));
